--- a/config/database.yml
+++ b/config/database.yml
@@ -7,10 +7,10 @@ development:
 
 production:
   adapter: mysql2
-  database: temp_database_production
-  host: localhost
-  username: root
-  password: a
+  database: heroku_06e5330dde514f0
+  host: mysql2://b1d67068e4608f:e979f241@us-cdbr-iron-east-02.cleardb.net/heroku_06e5330dde514f0?reconnect=true
+  username: b1d67068e4608f
+  password: e979f241
 
 test:
   adapter: mysql2
